      fucked state.
    - However, in release builds of the package, this is unset, so those will
      pull udebs from sarge as previously.
    - Try adding root=/dev/fd0 to the silo.floppy.conf since at least the 2.4
      kernel floppies are reported to not boot without it. This change may
      also affect the 2.6 kernel floppies, which need to be tested.
      Closes: #301374
  * Kurt Roeckx
    - Changed libdevmapper1.00-udeb to libdevmapper1.01-udeb in the monolithic
      package list.
  * Christian Perrier
    - Add the list of needed characters for Kazakh
  * Colin Watson
    - Force HOME=$(TEMP) for hfsutils calls throughout powerpc
      hd_media_common target.
    - Ship yaboot with powerpc hd-media images.

 -- Christian Perrier <bubulle@debian.org>  Fri,  8 Apr 2005 22:50:22 +0200

debian-installer (2005xxxx) UNRELEASED; urgency=low

  * Frans Pop
    - Add build dependencies needed to build PDF/TXT versions of the manual
    - Make main build script for the manual fail on errors
  * Joey Hess
    - Copyright file updates for 2005.

 -- Frans Pop <aragorn@tiscali.nl>  Thu, 24 Mar 2005 01:12:46 +0100

debian-installer (20050317) unstable; urgency=low

  * Frans Pop
    - Add German and Russian for official builds of the manual
    - Add PDF and TXT formats for official builds of the manual
  * Martin Michlmayr
    - Mention rootdev in the ARM manual, thanks Kyle McMartin.
    - Use the correct TFTP filename for ARM Netwinder.
    - Remove bogus information about noinitrd option from ARM manual.
    - Mention option needed for serial console installations on
      ARM Netwinder, thanks thanks Kyle McMartin.

 -- Joey Hess <joeyh@debian.org>  Thu, 17 Mar 2005 10:54:07 -0500

debian-installer (20050305) unstable; urgency=high

  * Thiemo Seufer
    - Do an e2fsck for the extra floppy images.
    - Handle sparse files in cramfs images more efficiently.
    - Use cramfs images for mips/r4k-ip22 and mips/r5k-ip22.
    - Add cramfsprogs build-dep for mips.