@@ -526,6 +526,7 @@ $(STAMPS)get_udebs-$(targetstring)-stamp: sources.list.udeb
 sources.list.udeb:
 	(set -e; \
 	echo "# This file is automatically generated, edit $@.local instead."; \
+	echo "deb copy:$(shell pwd)/ localudebs/"; \
 	if [ "$(MIRROR)x" != "x" ]; then \
 		echo "deb $(MIRROR) $(SUITE) main/debian-installer"; \
 	else \
@@ -723,8 +724,6 @@ pkg-lists/standard-udebs:
 		-sPackage apt.udeb/state/lists/*_Packages* | \
 		grep -v kernel-image | grep -v -- -modules | \
 		cut -d " " -f 2 > $@
-	# Add any local udebs to the list, skipping kernel stuff
-	find localudebs/*.udeb -printf '%f\n' | grep -v kernel-image | grep -v -- -modules- | sed 's/_.*//' >> $@
 
 # Get a list of all kernel modules matching the kernel version.
 pkg-lists/kernel-module-udebs:
@@ -734,9 +733,7 @@ pkg-lists/kernel-module-udebs:
 		grep-dctrl -P -e '.*-modules-$(VERSION)-$(KERNEL_FLAVOUR)' \
 			-sPackage apt.udeb/state/lists/*_Packages* | \
 			cut -d " " -f 2 >> $@;)
-	# Add any local kernel modules to the list.
-	$(foreach VERSION,$(KERNELVERSION), \
-		find localudebs/*-modules-$(VERSION)-$(KERNEL_FLAVOUR)_*.udeb -printf '%f\n' | sed 's/_.*//' >> $@;)
+
 # The kernel version changes from build to build, so always regen the file.
 .PHONY: pkg-lists/kernel-module-udebs
 
